More Bootstrap-3 compliant design
- Also, tabs in HTML
- Some templatetags (utils, navigation)
- Added i18n tags (WIP)

--- a/prologin/prologin/templates/prologin/messages.html
+++ b/prologin/prologin/templates/prologin/messages.html
@@ -1,7 +1,8 @@
+{# Ready for Django 1.7... sorry 1.6 #}
+
 {% if messages %}
 {% for message in messages %}
 
-<!-- Ready for Django 1.7... sorry 1.6 :s -->
 {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
 <div class="alert alert-dismissable alert-danger">
 {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
