--- a/prologin/prologin/static/prologin.css
+++ b/prologin/prologin/static/prologin.css
@@ -2,12 +2,25 @@
  * Page layout
  */
 
+@import url(http://fonts.googleapis.com/css?family=Roboto:700,300);
 html, body {
     margin: 0;
     padding: 0;
     background-color: #f1f2f2;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    font-size: 1em;
     color: #494949;
+    text-rendering: optimizelegibility;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin: 0 0 150px;
 }
 
 .main-row {
@@ -32,13 +45,16 @@ html, body {
     padding: 10px;
 }
 
-#footer {
-    margin: 30px 0;
-    padding: 30px 0 30px 0;
-    border-top: 1px solid #f1f2f2;
-    text-align: center;
-    color: #898989;
-    font-size: 12px;
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 120px;
+    padding: 30px;
+    color: #ededed;
+    font-size: 0.8em;
+    background: url('footer.png') repeat;
 }
 
 
@@ -46,24 +62,105 @@ html, body {
  * Header
  */
 
-#header {
-    margin: 10px 0 0 0;
+.navbar-default {
+    min-height: 90px;
+    background: none;
+    border: none;
+    background: #35479a;
+    border-radius: 0;
+}
+.navbar-default .navbar-brand {
+    height: 90px;
+    padding: 15px 0;
+    line-height: 1;
+    font-size: 1.6em;
+}
+.navbar-default .navbar-brand small {
+    font-size: 0.6em;
+    display: block;
+}
+.navbar-default .navbar-brand a, .navbar-default .navbar-brand a:visited {
+    display: block;
+    position: relative;
+    padding-top: 8px;
+    padding-left: 65px;
+    color: #fefefe;
+    text-decoration: none;
+}
+.navbar-default .navbar-brand a img {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.navbar-header {
+    float: none;
+}
+.navbar-default .navbar-toggle {
+    margin: 27px 15px 0;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fefefe;
+}
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+    background-color: #7389AE;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border: none;
+    margin-right: 0;
+}
+.navbar-default .navbar-collapse {
+    box-shadow: none;
+}
+.navbar-default .navbar-nav {
+    margin-top: 19px;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #fefefe;
+}
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a,
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+        color: #fefefe;
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+        background: #7389AE;
+    }
+}
+.navbar-default .collapsing .navbar-nav > li.sep,
+.navbar-default .in .navbar-nav > li.sep {
+    display: none;
+}
+.navbar-default .navbar-nav > li.sep > a, .navbar-default .navbar-nav > li.sep > a:hover {
+    cursor: default;
+    background-color: transparent;
+}
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li.active > a,
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:focus,
+.navbar-default .navbar-nav > .open > a:hover {
+    color: #fefefe;
+    background-color: #7389AE;
+}
+.navbar-default .dropdown-menu {
+    border-radius: 0;
+    border: none;
     padding: 0;
-    background-image: linear-gradient(#101632, #202b66);
-    border-bottom: 1px solid white;
 }
-
-#logo {
-    height: 100px;
-    overflow: hidden;
-    background-image: url('/static/logo_cube.png');
-    background-repeat: no-repeat;
+.navbar-default .dropdown-menu li.divider {
+    margin: 0;
 }
-
-#inner-header {
-    padding: 0;
+.navbar-default .dropdown-menu li a {
+    padding: 8px 20px;
 }
-
+.navbar-default .dropdown-menu li a:hover {
+    background: #7389AE;
+    color: #fefefe;
+}
 
 /*
  * Breadcrumbs
@@ -213,18 +310,12 @@ html, body {
  */
 
 .team-member {
-    padding: 10px;
-    text-align: center;
+    min-height: 80px;
 }
-
-.team-member > div {
-    padding: 10px;
-    border: 1px solid #eee;
-    border-radius: 5px;
-}
-
-.team-member > div > div {
-    padding-top: 10px;
+.team-member > div > a > img {
+    width: 64px;
+    height: 64px;
+    border-radius: 32px;
 }
 
 
