--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -1,71 +1,84 @@
-<!doctype html>{% load static i18n %}{% get_current_language as LANGUAGE_CODE %}
+{% load static i18n utils navigation %}{% get_current_language as LANGUAGE_CODE %}
+<!doctype html>
 <html lang="{{ LANGUAGE_CODE }}">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{% block title %}Prologin{% endblock %}</title>
+	<title>{% block super_title %}{% block title %}{% endblock %} – Prologin{% endblock %}</title>
 
-    <!-- JQuery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	{# Boostrap, FontAwesome #}
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	{# Custom #}
+	<link rel="stylesheet" type="text/css" href="{% static 'prologin.css' %}" />
+	{% block extra_head %}{% endblock %}
+</head>
+<body>
 
-    <!-- Custom -->
-    <link rel="stylesheet" type="text/css" href="{% static 'prologin.css' %}" />
-    {% block custom-headers %}{% endblock %}
-  </head>
-  <body>
+	{# Header #}
 
-    <!-- Header -->
-    <header id="header">
-      <div class="row main-row">
-	<div class="col-lg-2"><div id="logo"></div></div>
-	<div id="inner-header" class="col-lg-8">
-	  <h1 id="title">Prologin</h1>
-	  <div id="breadcrumbs">
-	    <ul class="breadcrumb">
-	      {% block breadcrumbs %}<li></li>{% endblock %}
-	    </ul>
-	  </div>
+	<div class="navbar-header">
+		<div class="navbar navbar-default">
+		<div class="container">
+				<div class="navbar-brand">
+					<a href="{% url 'home' %}">
+						<img src="{% static 'logo_cube_small.png' %}" alt="Prologin">
+						Prologin
+						<small>{% get_setting 'PROLOGIN_EDITION' %}</small>
+					</a>
+				</div>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<div class="navbar-collapse collapse pull-right">
+					<ul class="nav navbar-nav pull-right">
+						<li class="{% active '^about/' %}"><a href="#">{% trans "Découvrir" %}</a></li>
+						<li><a href="{% active '^train/' %}">{% trans "S'entraîner" %}</a></li>
+						<li><a href="{% active '^forum/' %}">{% trans "Forums" %}</a></li>
+						<li class="sep"><a>&nbsp;</a></li>
+						{% if user.is_authenticated %}
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span></a>
+							<ul class="dropdown-menu dropdown-menu-right" role="menu">
+								<li><a href="#"><i class="fa fa-cog"></i> {% trans "Mon compte" %}</a></li>
+								<li class="divider"></li>
+								<li><a href="{% url 'users:logout' %}"><i class="fa fa-power-off"></i> {% trans "Déconnexion" %}</a></li>
+							</ul>
+						</li>
+						{% else %}
+						<li class="{% active 'users:login' %}">
+							<a href="{% url 'users:login' %}?next={{ request.path }}">{% trans "Connexion" %}</a>
+						</li>
+						{% endif %}
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="col-lg-2"></div>
-      </div>
-    </header>
 
-    <div class="row main-row">
+	<div class="container">
+		{# {% block breadcrumbs %}<li></li>{% endblock %} #}
 
-      <!-- Left column -->
-      <div class="col-lg-2">
-	<h2 id="menu-title">Navigation</h2>
-	{% include "users/status.html" %}
-      </div>
+		{% include 'prologin/messages.html' %}
 
-      <!-- Middle column -->
-      <div id="content-block" class="col-lg-8">
-	{% include 'prologin/messages.html' %}
-	<div>
-	  {% block content %}<li></li>{% endblock %}
+		{% block content %}{% endblock %}
 	</div>
-	<p id="footer">
-	  Prologin, le Concours National d'Informatique.<br>
-	  <a href="#">mentions légales</a>
-	</p>
-      </div>
 
-      <!-- Right column -->
-      <div class="col-lg-2">
-	<h2>Nos partenaires</h2>
-	<ul id="sponsors-lst">
-	  <li>Sponsor 1</li>
-	  <li>Sponsor 2</li>
-	  <li>Sponsor 3</li>
-	</ul>
-      </div>
+	<footer>
+		<div class="container">
+			Copyright &copy; 1998-{% now 'Y' %}
+			{% trans "Prologin, le Concours National d'Informatique." %}<br>
+			<a href="#TODO">{% trans "Mentions légales" %}</a>
+		</div>
+	</footer>
 
-    </div>
-
-  </body>
+	{# Scripts #}
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	{% block extra_script %}{% endblock %}
+</body>
 </html>
