--- a/prologin/prologin/static/css/homepage.css
+++ b/prologin/prologin/static/css/homepage.css
@@ -3,6 +3,20 @@
 	background: #35479a;
 	color: #fefefe;
 	padding: 0 0 3em;
+	position: relative;
+}
+.home-jumbo:after {
+	content: "";
+	width: 100%;
+	height: 50px;
+	position: absolute;
+	bottom: 0;
+	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.15)));
+	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
+	background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
+	background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
+	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
 }
 
 @media screen and (max-width: 768px) {
@@ -14,7 +28,12 @@
 		margin: 0 !important;
 	}
 
+	.home-jumbo .tl-block h4:after {
+		background-position: right center !important;
+	}
+
 	.home-jumbo .tl-block {
+		text-align: right !important;
 		margin: 0 0 1em 0 !important;
 	}
 	.home-jumbo .tl-block .desc {
@@ -23,7 +42,7 @@
 
 	.home-jumbo .tl-block .desc:before {
 		/* arrow left */
-		top: 40% !important;
+		top: 2.5em !important;
 		left: -9px !important;
 		margin-left: -9px !important;
 		border-top: 9px solid transparent !important;
@@ -37,7 +56,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	margin-top: 53px;
+	margin-top: 57px;
 }
 
 .home-jumbo .tl-block {
@@ -83,12 +102,17 @@
 	background: #7389AE;
 	color: #efefef;
 	padding: 1em;
-	font-size: 0.9em;
+	font-size: 0.92em;
 	margin: 1em 0 0;
+	min-height: 6em;
+}
+
+.home-jumbo .tl-block .desc .btn {
+	font-size: inherit;
 }
 
 .home-jumbo .tl-block h4 {
-	font-weight: bold;
+	font-size: 1.4em;
 	margin-bottom: 0;
 }
 
@@ -99,7 +123,10 @@
 	height: 40px;
 	margin: 4px 0 2px;
 	z-index: 1;
-	background: url('small_cube.png') no-repeat 50%;
+	background-image: url('../img/small_cube.png');
+	background-repeat: no-repeat;
+	background-position: 50%;
+	background-size: 53px 40px;
 }
 
 @media screen and (min-width: 768px) {
