Fixed sponsor images. Fix favicon src.

--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -22,7 +22,7 @@
     <meta property="og:site_name" content="Prologin" />
     <meta property="fb:admins" content="" />
 
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" />
+    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}" />
 
     <link rel="alternate" type="application/atom+xml" title="{% trans "Latest blog articles" %}" href="{% url 'zinnia:entry_latest_feed' %}" />
 
