--- a/prologin/homepage/templates/homepage/sponsors.html
+++ b/prologin/homepage/templates/homepage/sponsors.html
@@ -8,9 +8,9 @@
 
 <h2>{% trans "Partenaires" %}</h2>
 <div class="row">
-{% usemacro sponsor "http://www.education.gouv.fr/" "img/ministere-education.png" "Éducation Nationale" %}
-{% usemacro sponsor "http://delegation.internet.gouv.fr/" "img/delegation-internet.png" "Délégation Internet" %}
-{% usemacro sponsor "http://www.epita.fr/" "img/epita.jpg" "EPITA" %}
-{% usemacro sponsor "http://www.polytechnique.fr/" "img/polytechnique.jpg" "École Polytechnique" %}
-{% usemacro sponsor "http://www.upmc.fr/" "img/upmc.png" "UPMC" %}
+{% usemacro sponsor "http://www.education.gouv.fr/" "img/sponsors/ministere-education.png" "Éducation Nationale" %}
+{% usemacro sponsor "http://delegation.internet.gouv.fr/" "img/sponsors/delegation-internet.png" "Délégation Internet" %}
+{% usemacro sponsor "http://www.epita.fr/" "img/sponsors/epita.jpg" "EPITA" %}
+{% usemacro sponsor "http://www.polytechnique.fr/" "img/sponsors/polytechnique.jpg" "École Polytechnique" %}
+{% usemacro sponsor "http://www.upmc.fr/" "img/sponsors/upmc.png" "UPMC" %}
 </div>
