--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -9,7 +9,7 @@
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span></a>
 		<ul class="dropdown-menu dropdown-menu-right" role="menu">
-			<li><a href="#"><i class="fa fa-cog"></i> {% trans "Mon compte" %}</a></li>
+			<li><a href="{% url 'users:edit' user.id %}"><i class="fa fa-cog"></i> {% trans "Mon compte" %}</a></li>
 			<li class="divider"></li>
 			<li><a href="{% url 'users:logout' %}"><i class="fa fa-power-off"></i> {% trans "Déconnexion" %}</a></li>
 		</ul>
