--- a/prologin/users/templates/users/edit_password.html
+++ b/prologin/users/templates/users/edit_password.html
@@ -6,17 +6,15 @@
 	{{ block.super }}
 	{% breadcrumb "Membres" "#TODO" %}
 	{% breadcrumb edited_user "users:profile" edited_user.id %}
-	{% breadcrumb "Modifier" "" %}
+	{% breadcrumb "Mot de passe" "" %}
 {% endblock breadcrumbs %}
 
-{% block title %}{% blocktrans with edited_user.username as username %}Modification du profil de {{ username }}{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans with edited_user.username as username %}Mot de passe de {{ username }}{% endblocktrans %}{% endblock %}
 
 {% block content %}
-<h1>{% blocktrans with edited_user.username as username %}Modification du profil de {{ username }}{% endblocktrans %}</h1>
+<h1>{% blocktrans with edited_user.username as username %}Mot de passe de {{ username }}{% endblocktrans %}</h1>
 
 {% include "users/as_staff_warning.html" %}
-
-<p class="text-right"><a href="{% url 'users:edit_password' edited_user.pk %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Modifier le mot de passe" %}</a></p>
 
 <form method="POST" class="form-horizontal">
 	{% csrf_token %}
