--- a/prologin/homepage/templates/homepage/jumbotron.html
+++ b/prologin/homepage/templates/homepage/jumbotron.html
@@ -3,13 +3,16 @@
 	<div class="container">
 
 		<h1>{% trans "Prologin, le concours national d'informatique." %}</h1>
-		<p>{% trans "Vous avez moins de 21 ans ? Participez à Prologin ! L'inscription est gratuite." %}</p>
+		<p>{% trans "Vous avez moins de 21 ans&nbsp;? Participez à Prologin&nbsp;! L'inscription est gratuite." %}</p>
 
 		{# timeline #}
 		<div class="htl">
 			<div class="row">
 				<div class="col-sm-offset-2 col-sm-8">
-					<div class="line"></div>
+					<div class="line">
+						<i class="fa fa-chevron-right" style="left: 25%"></i>
+						<i class="fa fa-chevron-right" style="left: 75%"></i>
+					</div>
 				</div>
 				{# block-1 #}
 				<div class="col-sm-4">
@@ -22,7 +25,9 @@
 							<div class="col-xs-7 col-sm-12">
 								<div class="desc">
 									<p>Un QCM et quatre exercices, à résoudre en ligne.</p>
-									<p class="text-center signin"><a href="#" class="btn btn-default btn-block">S'inscrire</a></p>
+									{% if not user.is_authenticated %}
+									<p class="text-center signin"><a href="{% url 'users:register' %}" class="btn btn-default btn-block">S'inscrire</a></p>
+									{% endif %}
 								</div>
 							</div>
 						</div>
@@ -48,7 +53,7 @@
 				{# /block-2 #}
 				{# block-3 #}
 				<div class="col-sm-4">
-					<div class="tl-block">
+					<div class="tl-block last">
 						<div class="row">
 							<div class="col-xs-5 col-sm-12">
 								<h4>Finale</h4>
