--- a/prologin/news/templates/zinnia/_entry_detail_base.html
+++ b/prologin/news/templates/zinnia/_entry_detail_base.html
@@ -3,48 +3,39 @@
 	{% block entry-header %}
 	<div class="entry-header">
 		{% block entry-title %}
-		<h2 class="entry-title">
+		<h1 class="entry-title">
 			<a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="bookmark">
 				{{ object.title|widont }}
 			</a>
-		</h2>
+		</h1>
 		{% endblock entry-title %}
 		{% block entry-info %}
-		<p class="entry-info">
-			{% block entry-authors %}
-			{% with authors=object.authors.all %}
-			{% if authors|length %}
-			{% trans "Written by" %}
-			{% for author in authors %}
-			<span class="vcard author">
-				<a href="{{ author.get_absolute_url }}" class="fn url{% if not author.get_full_name %} nickname{% endif %}" rel="author"
-					 title="{% blocktrans %}Show all {{ author }}'s entries{% endblocktrans %}">{{ author }}</a></span>{% if not forloop.last %}, {% endif %}
-			{% endfor %}
-			{% trans "on" context "on date" %}
-			{% else %}
-			{% trans "Written on" %}
-			{% endif %}
-			{% endwith %}
-			{% endblock entry-authors %}
-			{% block entry-published %}
-			<abbr class="published" title="{{ object.creation_date|date:"c" }}">{{ object.creation_date|date:"DATE_FORMAT" }}</abbr>
-			{% endblock entry-published %}
-			{% block entry-categories %}
-			{% with categories=object.categories.all %}
-			{% if categories|length %}
-			{% trans "in" %}
-			{% for category in categories %}
-			<a href="{{ category.get_absolute_url }}"
-				 title="{% blocktrans %}Show all entries in {{ category }}{% endblocktrans %}"
-				 rel="tag category">{{ category }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}{% endif %}.
-			{% endwith %}
-			{% endblock entry-categories %}
-		</p>
+		<div class="entry-meta-line text-muted">
+			<p class="entry-info">
+				{% with authors=object.authors.all %}
+				{% if authors|length %}
+				{% trans "Written by" %}
+				{% for author in authors %}
+				<span class="vcard author">
+					<a href="{{ author.get_absolute_url }}" class="fn url{% if not author.get_full_name %} nickname{% endif %}" rel="author"
+					title="{% blocktrans %}Show all {{ author }}'s entries{% endblocktrans %}">{{ author }}</a></span>{% if not forloop.last %}, {% endif %}
+					{% endfor %}
+					{% trans "on" %}
+					{% else %}
+					{% trans "Written on" %}
+					{% endif %}
+					{% endwith %}
+					<abbr class="published" title="{{ object.creation_date|date:"c" }}">{{ object.creation_date|date:"DATE_FORMAT" }}</abbr>
+				{% for tag in object.tags_list %}
+					<a href="{% url 'zinnia:tag_detail' tag %}"><span class="label label-default">{{ tag }}</span></a>
+				{% endfor %}
+			</p>
+			<p class="entry-last-update">
+				{% trans "Last update on" %} <abbr class="updated" title="{{ object.last_update|date:"c" }}">{{ object.last_update|date:"DATE_FORMAT" }}</abbr>
+			</p>
+		</div>
 		{% endblock entry-info %}
 		{% block entry-last-update %}
-		<p class="entry-last-update">
-			{% trans "Last update on" %} <abbr class="updated" title="{{ object.last_update|date:"c" }}">{{ object.last_update|date:"DATE_FORMAT" }}</abbr>.
-		</p>
 		{% endblock entry-last-update %}
 	</div>
 	{% endblock entry-header %}
@@ -87,6 +78,7 @@
 
 	{% block entry-footer %}
 	<div class="entry-footer">
+		{% comment %}
 		{% block entry-tags %}
 		<p class="entry-tags">
 			<strong>{% trans "Tags" %}</strong> :
@@ -99,9 +91,10 @@
 			{% endfor %}
 		</p>
 		{% endblock entry-tags %}
+		{% endcomment %}
 		{% block entry-shorturl %}
 		<p class="entry-shorturl">
-			<strong>{% trans "Short url" %}</strong> :
+			<strong>{% trans "Persistent URL:" %}</strong>
 			<a href="{{ object.short_url }}"
 				 title="{% blocktrans with object=object.title %}Short URL to {{ object }}{% endblocktrans %}"
 				 rel="shortlink">
@@ -109,52 +102,6 @@
 			</a>
 		</p>
 		{% endblock entry-shorturl %}
-
-		{% comment %}
-		{% block entry-discussions %}
-		<p class="entry-discussions">
-			<strong>{% trans "Discussions" %}</strong> :
-			{% block entry-comments %}
-			{% with comment_count=object.comment_count %}
-			{% if comment_count %}
-			<a href="{{ object.get_absolute_url }}#comments"
-				 title="{% blocktrans with object=object.title %}Comments on {{ object }}{% endblocktrans %}">
-				{% blocktrans count comment_count=comment_count %}{{ comment_count }} comment{% plural %}{{ comment_count }} comments{% endblocktrans %}
-			</a>
-			{% else %}
-			{% if object.comments_are_open %}
-			{% trans "No comments yet." %}
-			<a href="{{ object.get_absolute_url }}#comment-form"
-				 title="{% blocktrans with object=object.title %}Leave a comment on {{ object }}{% endblocktrans %}">
-				{% trans "Be first to comment!" %}
-			</a>
-			{% else %}
-			{% trans "Comments are closed." %}
-			{% endif %}
-			{% endif %}
-			{% endwith %}
-			{% endblock entry-comments %}
-			{% block entry-pingbacks %}
-			{% with pingback_count=object.pingback_count %}
-			{% if pingback_count %}
-			, <a href="{{ object.get_absolute_url }}#pingbacks" title="{% blocktrans with object=object.title %}Pingbacks on {{ object }}{% endblocktrans %}">
-				{% blocktrans count pingback_count=pingback_count %}{{ pingback_count }} pingback{% plural %}{{ pingback_count }} pingbacks{% endblocktrans %}
-			</a>
-			{% endif %}
-			{% endwith %}
-			{% endblock entry-pingbacks %}
-			{% block entry-trackbacks %}
-			{% with trackback_count=object.trackback_count %}
-			{% if trackback_count %}
-			, <a href="{{ object.get_absolute_url }}#trackbacks" title="{% blocktrans with object=object.title %}Trackbacks on {{ object }}{% endblocktrans %}">
-				{% blocktrans count trackback_count=trackback_count %}{{ trackback_count }} trackback{% plural %}{{ trackback_count }} trackbacks{% endblocktrans %}
-			</a>
-			{% endif %}
-			{% endwith %}
-			{% endblock entry-trackbacks %}
-		</p>
-		{% endblock entry-discussions %}
-		{% endcomment %}
 	</div>
 	{% endblock entry-footer %}
 </div>
