--- a/prologin/users/templates/users/login.html
+++ b/prologin/users/templates/users/login.html
@@ -1,5 +1,11 @@
 {% extends "prologin/base.html" %}
 {% load static i18n bootstrap %}
+{% load django_bootstrap_breadcrumbs %}
+
+{% block breadcrumbs %}
+	{{ block.super }}
+	{% breadcrumb "Connexion" "users:login" %}
+{% endblock breadcrumbs %}
 
 {% block title %}{% trans "Connexion" %}{% endblock %}
 
