--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -1,44 +1,54 @@
 {% extends "prologin/base.html" %}
 {% load i18n %}
+{% load django_bootstrap_breadcrumbs %}
+
+{% block breadcrumbs %}
+	{{ block.super }}
+	{% breadcrumb "Membres" "" %}
+	{% breadcrumb shown_user "users:profile" shown_user.id %}
+{% endblock breadcrumbs %}
 
 {% block title %}{% blocktrans with shown_user.username as username %}Profil de {{ username }}{% endblocktrans %}{% endblock %}
 
-
 {% block content %}
+
 {% trans "<em>non renseigné</em>" as noinfo %}
 <h1>{% blocktrans with shown_user.username as username %}Profil de {{ username }}{% endblocktrans %}</h1>
-<div>
-	{% if user.id == shown_user.id or user.is_staff %}
-	<p><a href="{% url 'users:edit' shown_user.id %}" class="btn btn-default"><i class="fa fa-edit"></i> {% trans "Modifier" %}</a></p>
-	<dl>
-		<dt>{% trans "Nom de famille" %}</dt>
-		<dd>{{ shown_user.last_name|default:noinfo }}</dd>
 
-		<dt>{% trans "Prénom" %}</dt>
-		<dd>{{ shown_user.first_name|default:noinfo }}</dd>
+{% if see_private %}
+<p class="text-right"><a href="{% url 'users:edit' shown_user.id %}" class="btn btn-default"><i class="fa fa-edit"></i> {% trans "Modifier" %}</a></p>
+{% endif %}
 
-		<dt>{% trans "Téléphone" %}</dt>
-		<dd>{{ shown_user.profile.phone_number|default:noinfo }}</dd>
+<dl class="dl-horizontal">
+	<dt>{% trans "Prénom" %}</dt>
+	<dd>{{ shown_user.first_name|default:noinfo }}</dd>
 
-		<dt>{% trans "Adresse email" %}</dt>
-		<dd>{{ shown_user.email|default:noinfo }}</dd>
+	<dt>{% trans "Nom de famille" %}</dt>
+	<dd>{{ shown_user.last_name|default:noinfo }}</dd>
 
-		<dt>{% trans "Date de naissance" %}</dt>
-		<dd>{% if shown_user.profile.birthday %}{{ shown_user.profile.birthday }} ({{ shown_user.profile.birthday|timesince }}){% else %}{{ noinfo }}{% endif %}</dd>
+{% if see_private %}
+	<dt>{% trans "Téléphone" %}</dt>
+	<dd>{{ shown_user.profile.phone_number|default:noinfo }}</dd>
 
-		<dt>{% trans "Adresse postale" %}</dt>
-		<dd>
-			{% if user.profile.has_partial_address %}
-			<address>
-				{{ shown_user.profile.address }}<br>
-				{{ shown_user.profile.postal_code }} {{ shown_user.profile.city }}<br>
-				{{ shown_user.profile.country }}
-			</address>
-			{% else %}
-			{{ noinfo }}
-			{% endif %}
-			</dd>
-	</dl>
-	{% endif %}
-</div>
+	<dt>{% trans "Adresse email" %}</dt>
+	<dd>{{ shown_user.email|default:noinfo }}</dd>
+
+	<dt>{% trans "Date de naissance" %}</dt>
+	<dd>{% if shown_user.profile.birthday %}{{ shown_user.profile.birthday }} ({{ shown_user.profile.birthday|timesince }}){% else %}{{ noinfo }}{% endif %}</dd>
+
+	<dt>{% trans "Adresse postale" %}</dt>
+	<dd>
+		{% if user.profile.has_partial_address %}
+		<address>
+			{{ shown_user.profile.address }}<br>
+			{{ shown_user.profile.postal_code }} {{ shown_user.profile.city }}<br>
+			{{ shown_user.profile.country }}
+		</address>
+		{% else %}
+		{{ noinfo }}
+		{% endif %}
+		</dd>
+{% endif %}
+</dl>
+
 {% endblock %}
