--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -52,9 +52,14 @@
 	</section>
 
 	{% endfor %}
+
 	</div>
 
 	<div class="col-sm-3">
+		<ul class="nav">
+			<li><a href="{% url 'zinnia:entry_archive_index' %}"><i class="fa fa-newspaper-o"></i> {% trans "Voir toutes les news" %}</a></li>
+		</ul>
+
 		<h2>{% trans "Plus d'infos" %}</h2>
 		<ul class="nav">
 			<li><a href="#TODO">{% trans "L'association Prologin" %}</a></li>
