--- a/prologin/users/templates/users/edit_password.html
+++ b/prologin/users/templates/users/edit_password.html
@@ -6,6 +6,7 @@
 	{{ block.super }}
 	{% breadcrumb "Membres" "#TODO" %}
 	{% breadcrumb edited_user "users:profile" edited_user.id %}
+	{% breadcrumb "Modifier" "users:edit" edited_user.id %}
 	{% breadcrumb "Mot de passe" "" %}
 {% endblock breadcrumbs %}
 
